fixed nav bar alignment and added background

--- a/css/aboutstyles.css
+++ b/css/aboutstyles.css
@@ -6,8 +6,59 @@ last modified: September 1 2025
 description: [html files it refers to (if known)]
 */
 
+body {
+    margin: 0;
+    /* removing this as it cuts off the other half section height: 100vh; */ /*makes the body take up the full height of the viewport*/
+    min-height: 100vh; /* allow body to grow beyond 1 screen */
+    width: 100vw; /*makes the body take up the full width of the viewport*/
+    background: black;
+    /*overflow: hidden;*/ /*hides any overflow*/
+    overflow-x: hidden; /* only hide horizontal scroll, keep vertical */
+    z-index: -20; /*makes sure the background is behind all other elements*/
+}
+
+body::before { /*::before to make another layer in the body section*/
+    content: ""; /*necessary for the ::before to work*/
+    position: absolute; /*makes the position absolute so that it can be positioned anywhere*/
+    inset: 0; /*blobs wouldnt show unless i did this*/
+    background-image: /* creates the blobs using radial gradients*/
+        radial-gradient(at 20% 20%, #4361ee, transparent 40%),
+        radial-gradient(at 80% 60%, #4cc9f0, transparent 40%),
+        radial-gradient(at 50% 80%, #7209b7, transparent 40%),
+        radial-gradient(at 80% 25%, #f72585, transparent 40%);
+    animation: moveBlob 20s linear infinite, Blobpulse 3s infinite alternate; /*moves and pulses the blobs*/
+    background-size: 200% 200%; /*makes the blobs bigger so that they can move around more*/
+    z-index : -10; /*makes sure the background is behind all other elements*/
+}
+@keyframes moveBlob { /*moves the blobs around*/
+    0% {
+        background-position: 0% 0%;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0% 0%;
+    }
+}
+
+@keyframes Blobpulse { /*makes the blobs pulse*/
+    0% {
+        filter: brightness(0.3);
+    }
+    100% {
+        filter: brightness(1);
+    }
+}
+
 /* Navigation Bar Styles */
 /* RYAN: This is just a temporary layout, we will use flexbox to incorporate responsive design later */
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 header {
     background-color: white;
 }
